[gd_scene load_steps=11 format=3 uid="uid://mwha5hojyas8"]

[ext_resource type="PackedScene" uid="uid://fxyaba6k4gjf" path="res://Scenes/Objects/gate.tscn" id="1_0g3ou"]
[ext_resource type="Script" path="res://Scripts/World/world.gd" id="1_io8vi"]
[ext_resource type="PackedScene" uid="uid://druhbl0lql6u" path="res://Scenes/Objects/torch.tscn" id="2_47qaq"]
[ext_resource type="MeshLibrary" uid="uid://b72eya0hnevef" path="res://MeshLib/meshlib_dungeontileset.tres" id="3_uicob"]
[ext_resource type="PackedScene" uid="uid://cd86g4vam4445" path="res://Scenes/Player/Player.tscn" id="4_aww4n"]
[ext_resource type="PackedScene" uid="uid://dmm56vffjj30r" path="res://Scenes/World/enemy_spawner.tscn" id="5_yb11b"]
[ext_resource type="PackedScene" uid="uid://n8wlch8tbxef" path="res://Scenes/Enemies/Slime.tscn" id="6_tvwl2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nup3e"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0.75, 0.75, 0.75, 1)
sky_energy_multiplier = 0.7
ground_bottom_color = Color(1, 1, 1, 1)
ground_horizon_color = Color(0.75, 0.75, 0.75, 1)

[sub_resource type="Sky" id="Sky_rhf5c"]
sky_material = SubResource("ProceduralSkyMaterial_nup3e")

[sub_resource type="Environment" id="Environment_t3trb"]
background_mode = 1
sky = SubResource("Sky_rhf5c")
ambient_light_source = 3
ambient_light_sky_contribution = 0.6
tonemap_mode = 2
glow_enabled = true

[node name="World" type="Node" node_paths=PackedStringArray("spawners")]
script = ExtResource("1_io8vi")
spawners = [NodePath("Spawners/EnemySpawner"), NodePath("Spawners/EnemySpawner2"), NodePath("Spawners/EnemySpawner3"), NodePath("Spawners/EnemySpawner4")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_t3trb")

[node name="Map" type="Node" parent="."]

[node name="GridMap" type="GridMap" parent="Map" groups=["world"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh_library = ExtResource("3_uicob")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 0, 0, 65535, 0, 0, 65535, 65535, 0, 0, 65535, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 65534, 0, 0, 65533, 0, 0, 65532, 0, 0, 65531, 0, 0, 65530, 0, 0, 65529, 0, 0, 65529, 65535, 0, 65530, 65535, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 65531, 65535, 0, 6, 65535, 0, 6, 0, 0, 65529, 65534, 0, 65529, 65533, 0, 65529, 65532, 0, 65529, 65531, 0, 65529, 65530, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 6, 65530, 0, 6, 65531, 0, 6, 65532, 0, 6, 65533, 0, 6, 65534, 0, 6, 1, 0, 6, 2, 0, 6, 3, 0, 6, 4, 0, 6, 5, 0, 5, 5, 0, 4, 5, 0, 3, 5, 0, 2, 5, 0, 1, 5, 0, 0, 5, 0, 65535, 5, 0, 65533, 5, 0, 65532, 5, 0, 65531, 5, 0, 65530, 5, 0, 65529, 5, 0, 65529, 4, 0, 65529, 3, 0, 65529, 2, 0, 65529, 1, 0, 65530, 1, 0, 65530, 2, 0, 65530, 3, 0, 65530, 4, 0, 65531, 4, 0, 65531, 3, 0, 65531, 2, 0, 65531, 1, 0, 65532, 3, 0, 65533, 2, 0, 65533, 1, 0, 65533, 3, 0, 65533, 4, 0, 65532, 4, 0, 65534, 5, 0, 65534, 4, 0, 65534, 3, 0, 65534, 2, 0, 65534, 1, 0, 65532, 1, 0, 65532, 2, 0, 65535, 4, 0, 65535, 3, 0, 65535, 2, 0, 65535, 1, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 2, 4, 0, 2, 3, 0, 2, 2, 0, 2, 1, 0, 3, 1, 0, 3, 2, 0, 3, 4, 0, 3, 3, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 5, 3, 0, 5, 2, 0, 5, 1, 0, 5, 4, 0, 5, 65534, 0, 4, 65534, 0, 3, 65534, 0, 2, 65534, 0, 1, 65534, 0, 0, 65534, 0, 65535, 65534, 0, 65534, 65534, 0, 65533, 65534, 0, 65532, 65534, 0, 65530, 65533, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 5, 65532, 0, 4, 65532, 0, 3, 65532, 0, 2, 65532, 0, 1, 65532, 0, 0, 65532, 0, 65535, 65532, 0, 65534, 65532, 0, 65533, 65532, 0, 65532, 65532, 0, 65531, 65532, 0, 65530, 65532, 0, 65530, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 5, 65530, 0, 4, 65530, 0, 3, 65530, 0, 2, 65530, 0, 1, 65530, 0, 0, 65530, 0, 65535, 65530, 0, 65534, 65530, 0, 65533, 65530, 0, 65532, 65530, 0, 65531, 65530, 0, 65530, 65530, 0, 7, 5, 0, 7, 4, 0, 7, 3, 0, 7, 2, 0, 7, 1, 0, 7, 0, 0, 7, 65535, 0, 7, 65534, 0, 7, 65533, 0, 7, 65532, 0, 7, 65531, 0, 7, 65530, 0, 7, 65529, 0, 65528, 65529, 0, 65528, 65530, 0, 65528, 65531, 0, 65528, 65532, 0, 65528, 65533, 0, 65528, 65535, 0, 65528, 0, 0, 65528, 1, 0, 65528, 2, 0, 65528, 3, 0, 65528, 4, 0, 65528, 5, 0, 65527, 5, 0, 65527, 4, 0, 65527, 3, 0, 65527, 2, 0, 65527, 1, 0, 65527, 0, 0, 65527, 65535, 0, 65527, 65534, 0, 65527, 65533, 0, 65527, 65532, 0, 65526, 65532, 0, 65526, 65531, 0, 65527, 65531, 0, 65527, 65530, 0, 65527, 65529, 0, 65528, 65534, 0, 65526, 65530, 0, 65526, 65533, 0, 65526, 65534, 0, 65526, 65535, 0, 65526, 0, 0, 65526, 1, 0, 65526, 2, 0, 65526, 3, 0, 65526, 4, 0, 65526, 5, 0, 65526, 65529, 0, 8, 65529, 0, 9, 65529, 0, 9, 65530, 0, 9, 65531, 0, 9, 65532, 0, 9, 2, 0, 9, 3, 0, 9, 4, 0, 9, 5, 0, 8, 5, 0, 8, 4, 0, 8, 3, 0, 8, 2, 0, 8, 1, 0, 8, 0, 0, 8, 65535, 0, 8, 65534, 0, 8, 65530, 0, 8, 65531, 0, 8, 65532, 0, 8, 65533, 0, 65526, 65528, 2, 65527, 65528, 2, 65532, 65528, 2, 65533, 65528, 2, 3, 65528, 2, 2, 65528, 2, 1, 65528, 2, 0, 65528, 2, 65535, 65528, 2, 65534, 65528, 2, 8, 65528, 2, 9, 65528, 2, 10, 65529, 1441794, 10, 65530, 1441794, 10, 65531, 1441794, 10, 65532, 1441794, 10, 1, 1441794, 10, 2, 1441794, 10, 3, 1441794, 10, 65533, 1441794, 10, 65534, 1441794, 10, 65535, 1441794, 10, 0, 1441794, 10, 4, 1441794, 10, 5, 1441794, 9, 6, 655362, 8, 6, 655362, 3, 6, 655362, 2, 6, 655362, 1, 6, 655362, 0, 6, 655362, 65535, 6, 655362, 65534, 6, 655362, 65533, 6, 655362, 65532, 6, 655362, 65527, 6, 655362, 65526, 6, 655362, 65525, 5, 1048578, 65525, 4, 1048578, 65525, 3, 1048578, 65525, 2, 1048578, 65525, 1, 1048578, 65525, 0, 1048578, 65525, 65535, 1048578, 65525, 65534, 1048578, 65525, 65533, 1048578, 65525, 65532, 1048578, 65525, 65531, 1048578, 65525, 65530, 1048578, 65525, 65529, 1048578, 9, 65533, 1048576, 9, 65534, 1048576, 9, 65535, 1048576, 9, 0, 1048576, 9, 1, 1048576, 262133, 6, 1048579, 262133, 65528, 3, 196618, 65528, 1441795, 196618, 6, 655363, 65528, 65528, 2, 65529, 65528, 2, 65530, 65528, 2, 65531, 65528, 2, 4, 65528, 2, 5, 65528, 2, 6, 65528, 2, 7, 65528, 2, 7, 6, 655362, 6, 6, 655362, 5, 6, 655362, 4, 6, 655362, 65531, 6, 655362, 65530, 6, 655362, 65529, 6, 655362, 65528, 6, 655362)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Objects" type="Node" parent="Map"]

[node name="gate" parent="Map/Objects" instance=ExtResource("1_0g3ou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -14)

[node name="gate2" parent="Map/Objects" instance=ExtResource("1_0g3ou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -14)

[node name="gate3" parent="Map/Objects" instance=ExtResource("1_0g3ou")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 12, 0, 12)

[node name="gate4" parent="Map/Objects" instance=ExtResource("1_0g3ou")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -12, 0, 12)

[node name="torch" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, 1, -13.9)

[node name="torch2" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -16, 1, -13.9)

[node name="torch3" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 16, 1, -13.9)

[node name="torch4" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8, 1, -13.9)

[node name="torch5" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 8, 1, 11.9)

[node name="torch6" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 16, 1, 11.9)

[node name="torch7" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -16, 1, 11.9)

[node name="torch8" parent="Map/Objects" instance=ExtResource("2_47qaq")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -8, 1, 11.9)

[node name="Player" type="Node" parent="."]

[node name="Player" parent="Player" instance=ExtResource("4_aww4n")]

[node name="Spawners" type="Node" parent="."]

[node name="EnemySpawner" parent="Spawners" instance=ExtResource("5_yb11b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -13.4)
enemy_scene = ExtResource("6_tvwl2")
target = NodePath("../../Player/Player")

[node name="EnemySpawner2" parent="Spawners" instance=ExtResource("5_yb11b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -13.4)
enemy_scene = ExtResource("6_tvwl2")
target = NodePath("../../Player/Player")

[node name="EnemySpawner3" parent="Spawners" instance=ExtResource("5_yb11b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 11.4)
enemy_scene = ExtResource("6_tvwl2")
target = NodePath("../../Player/Player")

[node name="EnemySpawner4" parent="Spawners" instance=ExtResource("5_yb11b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 11.4)
enemy_scene = ExtResource("6_tvwl2")
target = NodePath("../../Player/Player")

[node name="Timers" type="Node" parent="."]

[node name="WaveCDTimer" type="Timer" parent="Timers"]
autostart = true

[node name="SpawnTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="timeout" from="Timers/WaveCDTimer" to="." method="_on_wave_cd_timer_timeout"]
[connection signal="timeout" from="Timers/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
